Version 1.8.0 - 2010-12-24
* Initial release