@@ -1,2 +1,4 @@
+* Manage default values of trytond configuration
+
 Version 1.8.0 - 2010-12-24
 * Initial release
